<resources>
    <string name="app_name">Garbage_Management</string>
    <string name="home">Waste Master</string>
    <string name="login">Login</string>
    <string name="name">User Name</string>
    <string name="password">Password</string>
    <string name="login_B">Login</string>
    <string name="register">Register</string>
    <string name="work_report">Work Reports</string>
    <string name="date">Date</string>
    <string name="workreport1">Number of Complaint</string>
    <string name="workreport2">Total Collection Containers</string>
    <string name="workreport3">Total Filled Containers</string>
    <string name="workreport4">Pending Customer Complaint</string>
    <string name="btn_workreport">Add Work Reports</string>
    <string name="edit_date">Date</string>
    <string name="edit_text1">Total Collection Containers</string>
    <string name="edit_text2">Total Filled Containers</string>
    <string name="edit_text3">Pending Customer Complaint</string>
    <string name="edit_text5">" Number of Complaint"</string>
    <string name="editItext5">" Number of Complaint"</string>
    <string name="edittext1">" Number of Complaint"</string>
    <string name="newedit">" Number of Complaint"</string>
    <string name="editNameone">Number of Complaint</string>
    <string name="editNametwo">Total Collection Containers</string>
    <string name="editNametree">Total Filled Containers</string>
    <string name="editNamefour">Pending Customer Complaint</string>
    <string name="editbin">Update Work Reports</string>
    <string name="deletebin">Delete Work Reports</string>
    <string name="editworkreport">Edit Work Reports</string>
    <string name="search">Search</string>
    <string name="homelogin">Login</string>
    <string name="btnnewadd">Add Work Report</string>
    <string name="btnupdate">Update Work</string>
</resources>